# cgame

./: CMakeLists.txt
client/: CMakeLists.txt  ulti_client.cc
core/: Bids.h  CMakeLists.txt  Card.cc  Card.h  CardComparison.cc  CardComparison.h  CardProperties.h  Deck.cc  Deck.h  Game.h  GameState.h  GameStateHandler.cc  GameStateHandler.h  Player.h  ScoreEvaluator.h  ValidMoveFinder.cc  ValidMoveFinder.h
core/test/: CMakeLists.txt  TestCard.cc  TestDeck.cc  TestMain.cc
server/: CMakeLists.txt
ulti/: CMakeLists.txt  ulti.cc
ulti_core/: Card.cc  Card.h  CardComparison.cc  CardComparison.h  CardProperties.h  Deck.cc
ulti_server/: CMakeLists.txt
